--- a/flex/02-flex-header/index.html
+++ b/flex/02-flex-header/index.html
@@ -10,11 +10,13 @@
   <body>
     <div class="header">
       <div class="left-links">
+        <div id="tempDiv">
         <ul>
           <li><a href="#">ONE</a></li>
           <li><a href="#">TWO</a></li>
           <li><a href="#">THREE</a></li>
         </ul>
+      </div>
       </div>
       <div class="logo">LOGO</div>
       <div class="right-links">
